--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
     <title>BIT Bookstore</title>
 
     <link rel="stylesheet" href="./css/style.css">    
-    <link rel="stylesheet" href="./css/mq.css">    
+    <link rel="stylesheet" href="./css/mq.css">   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
-<body>
+<body class="contenido">
     <div class="contenedor">
     <header>
-        <nav>
-            <h2 class="logo">BIT Bookstore</h2>
-
+        <nav class="menu">
+            <div class="container-fluid">                
+                <h2 class="logo">BIT Bookstore</h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>           
+            
             <!-- Opciones del menú --> 
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Iniciar Sesión</a></li>
-                <li><a href="#">Registrarse</a></li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+            <ul class="opcion">
+                <li class="lista"><a href="#">Inicio</a></li>
+                <li class="lista"><a href="#">Iniciar Sesión</a></li>
+                <li class="lista"><a href="#">Registrarse</a></li>
             </ul>
+            </div>
+        </div>
         </nav>
     </header>
 
@@ -33,12 +41,13 @@
             <form class="propiedades">
                 <h4 class="precio">Valor Unitario $50.000</h4>
                 <h4 class="cantidad">Cantidad <input type="number"></h4>
-                <h4 class="linea">________________________________</h4>
+                <h4 class="linea">_______________________</h4>
                 <h3 class="total">Total $50.000</h3>
                 <button class="boton">Añadir al carrito</button>
             </form>
         </article>
     </section>    
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
